# shrugger

./: .coveragerc  .gitignore  CONFIG.md  LICENSE  Makefile  README.md  REPORT.md  config.json.template  environment.yml  pyproject.toml
abstainer/: __init__.py
abstainer/dataset/prompts/: generation_prompts.txt  system_prompt.txt
abstainer/dataset/scripts/: archive_and_promote.py  check_blind.py  check_duplicates.py  create_curated_questions.py  get_questions.py
abstainer/src/: baselines.py  eval_utils.py  experiment.py  experiment_utils.py  io_utils.py  model.py  parsing.py  plots.py  probes.py  prompts.py  steer.py  utils.py
abstainer/src/analysis/: __init__.py  data_loader.py  direction_analysis.py  experiment_accuracy.py  metrics_analysis.py
examples/: combined_experiment.ipynb  combined_experiment.py  efficient_combined_experiment.py  fisher_lda_analysis_example.ipynb  hidden_states_example.py  run.py
examples/results/combined_experiment/: experiment_config.json  hidden_states_V0_letters.json  hidden_states_V0_letters.npz  likert_results_V0_letters.json
experiments/: README.md  run_comprehensive_experiments.py  run_metrics_analysis.py
notebooks/analysis/: abstention_direction.ipynb  abstention_direction2.ipynb  analyze_experiment_accuracy.ipynb  analyze_metrics.ipynb  analyze_metrics_check copy.ipynb
notebooks/exploration/: minimal_combined_experiment.ipynb  reorganize_data_demo.ipynb  sandbox.ipynb  sandbox2.ipynb  sandbox3.ipynb  sandbox_minimal.ipynb
notebooks/exploration/results/: test_nums.json
notebooks/exploration/results/minimal_experiment/: hidden_states_V2.json  hidden_states_V2.npz  likert_results_V2.json
notebooks/exploration/results/my_experiment/: hidden_states_V2_letters.json  hidden_states_V2_letters.npz  likert_results_V2_letters.json
results/: likert_exp_0.json  test.json  test_likert.json  test_nums.json
scripts/: cleanup_corrupted_files.py  reorganize_by_layer.py  run_experiments.sh  run_fisher_analysis.py
scripts/analysis/: analyze_comprehensive_results.py  analyze_dev_projections.py  check_dev_data.py  check_lda.py  examine_hidden_states.py  run_fisher_analysis.py  verify_layer_data.py
shrugger/: __init__.py
shrugger/dataset/data/: curated_questions.tsv
shrugger/dataset/prompts/: blind_prompt.txt
shrugger/dataset/reports/: comparison_summary.txt
shrugger/dataset/scripts/: archive_and_promote.py  check_blind.py
shrugger/dataset/zero_pass/reports/: comparison_summary.txt
shrugger/src/: __init__.py  experiment_utils.py  metrics.py  model.py  parsing.py  plots.py  residual_viz.py  steer.py  utils.py
shrugger/src/analysis/: data_loader.py  direction_analysis.py  experiment_accuracy.py  fisher_lda.py  metrics_analysis.py
tests/: README.md  __init__.py
tests/analysis/: __init__.py  test_analysis_direct.py  test_analysis_standalone.py  test_fisher_lda.py
tests/examples/: __init__.py  test_likert_descriptions.py
tests/integration/: __init__.py  test_full_pipeline.py
tests/unit/: test_metrics.py
